2006-07-28  Ethan A Merritt <merritt@u.washington.edu>

	* tutorial/Makefile.am.in:  Set environmental variable GNUTERM to latex
	before running gnuplot on the tutorial demos.  Bypasses any potential
	conflicts of default terminal type with currently installed terminals.
	Bugfix.

2006-07-27  Ethan A Merritt <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_set_color): If the color is specified
	by linetype, fall back to PS_linetype for monochrome/grayscale plots.
	Bug #1529884

2206-07-27  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* docs/gnuplot.doc (x11_mouse): Reword the section about possible hangs
	when piping from /dev/null to reflect the 4.2 behaviour where mouse is
	turned on by default.

	* src/plot.c (main):
	* src/wxt_gui.c (wxt_atexit):
	* src/wxt_plot.h:
	Move the code parsing **argv for "-persist" from wxt_atexit() to
	main(). X11_args() parses it too in main() and removes the tokens that
	it recognizes from **argv, so we need to do it before that happens.
	Also avoid processing of the mouse events when the wxt terminal is not
	the current active one at exit time.

2006-07-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to recent changes in English files.

2006-07-26  Per Persson  <persquare@mac.com>
	* term/aquaterm.trm: Made UTF8 the default encoding for AquaTerm.
	
2006-07-26  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* tutorial/Makefile.am.in (RUN_GNUPLOT): Can the .plt.tex command
	sequence into this new macro.
	(.plt.tex): Use the new macro. Ged rid of the @ marker that hides
	the gnuplot invocation, while at it.
	(eg7.eps): New rule using the macro, to ensure make knows how to
	make the .eps file, even if the .tex output is still present.

2006-07-26  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* tutorial/.cvsignore: Add *.eps and test.tex to the list of files
	to be ignored by CVS.

2006-07-25  Timothee Lecomte  <timothee.lecomte@ens.fr>
